# OpenGLGameOfLife

2D/: CMakeLists.txt
2D/include/glad/: glad.h
2D/res/shaders/: fragment.frag  fragment.glsl  vertex.glsl
2D/src/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  glad.c  main.cpp
